AntlrTestProj/MyLanguageParser.cpp

// Generated from ./MyLanguage.g4 by ANTLR 4.13.2


#include "MyLanguageVisitor.h"

#include "MyLanguageParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MyLanguageParserStaticData final {
  MyLanguageParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MyLanguageParserStaticData(const MyLanguageParserStaticData&) = delete;
  MyLanguageParserStaticData(MyLanguageParserStaticData&&) = delete;
  MyLanguageParserStaticData& operator=(const MyLanguageParserStaticData&) = delete;
  MyLanguageParserStaticData& operator=(MyLanguageParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag mylanguageParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<MyLanguageParserStaticData> mylanguageParserStaticData = nullptr;

void mylanguageParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (mylanguageParserStaticData != nullptr) {
    return;
  }
#else
  assert(mylanguageParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MyLanguageParserStaticData>(
    std::vector<std::string>{
      "prog", "top_level", "func_decl", "stmt", "stmts", "if_stmt", "while_stmt", 
      "call_stmt", "var_decl_stmt", "assign_stmt", "print_stmt", "expr", 
      "bitwiseor", "bitwisexor", "bitwiseand", "eqcomparison", "comparison", 
      "shift", "summa", "term", "factor"
    },
    std::vector<std::string>{
      "", "'func'", "'call'", "'var'", "'print'", "'if'", "'else'", "'while'", 
      "'{'", "'}'", "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", 
      "'<='", "'>'", "'>='", "'=='", "'!='", "'~'", "'|'", "'&'", "'^'", 
      "'<<'", "'>>'", "'='", "';'"
    },
    std::vector<std::string>{
      "", "FUNC", "CALL", "VAR", "PRINT", "IF", "ELSE", "WHILE", "LBRA", 
      "RBRA", "LPAR", "RPAR", "PLUS", "MINUS", "MULT", "DIV", "REM", "LESS", 
      "LESSEQUAL", "GREATER", "GREATEREQUAL", "EQUAL", "NOTEQUAL", "BITNOT", 
      "BITOR", "BITAND", "BITXOR", "SHIFTLEFT", "SHIFTRIGHT", "ASSIGN", 
      "SEMICOLON", "IDENT", "NUMBER", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  mylanguageParserStaticData = std::move(staticData);
}

}

MyLanguageParser::MyLanguageParser(TokenStream *input) : MyLanguageParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

MyLanguageParser::MyLanguageParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  MyLanguageParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *mylanguageParserStaticData->atn, mylanguageParserStaticData->decisionToDFA, mylanguageParserStaticData->sharedContextCache, options);
}

MyLanguageParser::~MyLanguageParser() {
  delete _interpreter;
}

const atn::ATN& MyLanguageParser::getATN() const {
  return *mylanguageParserStaticData->atn;
}

std::string MyLanguageParser::getGrammarFileName() const {
  return "MyLanguage.g4";
}

const std::vector<std::string>& MyLanguageParser::getRuleNames() const {
  return mylanguageParserStaticData->ruleNames;
}

const dfa::Vocabulary& MyLanguageParser::getVocabulary() const {
  return mylanguageParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView MyLanguageParser::getSerializedATN() const {
  return mylanguageParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

MyLanguageParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MyLanguageParser::Top_levelContext *> MyLanguageParser::ProgContext::top_level() {
  return getRuleContexts<MyLanguageParser::Top_levelContext>();
}

MyLanguageParser::Top_levelContext* MyLanguageParser::ProgContext::top_level(size_t i) {
  return getRuleContext<MyLanguageParser::Top_levelContext>(i);
}


size_t MyLanguageParser::ProgContext::getRuleIndex() const {
  return MyLanguageParser::RuleProg;
}


std::any MyLanguageParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyLanguageVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

MyLanguageParser::ProgContext* MyLanguageParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, MyLanguageParser::RuleProg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MyLanguageParser::FUNC

    || _la == MyLanguageParser::VAR) {
      setState(42);
      top_level();
      setState(47);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Top_levelContext ------------------------------------------------------------------

MyLanguageParser::Top_levelContext::Top_levelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MyLanguageParser::Func_declContext* MyLanguageParser::Top_levelContext::func_decl() {
  return getRuleContext<MyLanguageParser::Func_declContext>(0);
}

MyLanguageParser::Var_decl_stmtContext* MyLanguageParser::Top_levelContext::var_decl_stmt() {
  return getRuleContext<MyLanguageParser::Var_decl_stmtContext>(0);
}


size_t MyLanguageParser::Top_levelContext::getRuleIndex() const {
  return MyLanguageParser::RuleTop_level;
}


std::any MyLanguageParser::Top_levelContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyLanguageVisitor*>(visitor))
    return parserVisitor->visitTop_level(this);
  else
    return visitor->visitChildren(this);
}

MyLanguageParser::Top_levelContext* MyLanguageParser::top_level() {
  Top_levelContext *_localctx = _tracker.createInstance<Top_levelContext>(_ctx, getState());
  enterRule(_localctx, 2, MyLanguageParser::RuleTop_level);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(50);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MyLanguageParser::FUNC: {
        enterOuterAlt(_localctx, 1);
        setState(48);
        func_decl();
        break;
      }

      case MyLanguageParser::VAR: {
        enterOuterAlt(_localctx, 2);
        setState(49);
        var_decl_stmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_declContext ------------------------------------------------------------------

MyLanguageParser::Func_declContext::Func_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyLanguageParser::Func_declContext::FUNC() {
  return getToken(MyLanguageParser::FUNC, 0);
}

tree::TerminalNode* MyLanguageParser::Func_declContext::IDENT() {
  return getToken(MyLanguageParser::IDENT, 0);
}

tree::TerminalNode* MyLanguageParser::Func_declContext::LBRA() {
  return getToken(MyLanguageParser::LBRA, 0);
}

MyLanguageParser::StmtsContext* MyLanguageParser::Func_declContext::stmts() {
  return getRuleContext<MyLanguageParser::StmtsContext>(0);
}

tree::TerminalNode* MyLanguageParser::Func_declContext::RBRA() {
  return getToken(MyLanguageParser::RBRA, 0);
}


size_t MyLanguageParser::Func_declContext::getRuleIndex() const {
  return MyLanguageParser::RuleFunc_decl;
}


std::any MyLanguageParser::Func_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyLanguageVisitor*>(visitor))
    return parserVisitor->visitFunc_decl(this);
  else
    return visitor->visitChildren(this);
}

MyLanguageParser::Func_declContext* MyLanguageParser::func_decl() {
  Func_declContext *_localctx = _tracker.createInstance<Func_declContext>(_ctx, getState());
  enterRule(_localctx, 4, MyLanguageParser::RuleFunc_decl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    match(MyLanguageParser::FUNC);
    setState(53);
    match(MyLanguageParser::IDENT);
    setState(54);
    match(MyLanguageParser::LBRA);
    setState(55);
    stmts();
    setState(56);
    match(MyLanguageParser::RBRA);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

MyLanguageParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MyLanguageParser::If_stmtContext* MyLanguageParser::StmtContext::if_stmt() {
  return getRuleContext<MyLanguageParser::If_stmtContext>(0);
}

MyLanguageParser::While_stmtContext* MyLanguageParser::StmtContext::while_stmt() {
  return getRuleContext<MyLanguageParser::While_stmtContext>(0);
}

MyLanguageParser::Var_decl_stmtContext* MyLanguageParser::StmtContext::var_decl_stmt() {
  return getRuleContext<MyLanguageParser::Var_decl_stmtContext>(0);
}

MyLanguageParser::Assign_stmtContext* MyLanguageParser::StmtContext::assign_stmt() {
  return getRuleContext<MyLanguageParser::Assign_stmtContext>(0);
}

MyLanguageParser::Print_stmtContext* MyLanguageParser::StmtContext::print_stmt() {
  return getRuleContext<MyLanguageParser::Print_stmtContext>(0);
}

MyLanguageParser::Call_stmtContext* MyLanguageParser::StmtContext::call_stmt() {
  return getRuleContext<MyLanguageParser::Call_stmtContext>(0);
}

tree::TerminalNode* MyLanguageParser::StmtContext::LBRA() {
  return getToken(MyLanguageParser::LBRA, 0);
}

MyLanguageParser::StmtsContext* MyLanguageParser::StmtContext::stmts() {
  return getRuleContext<MyLanguageParser::StmtsContext>(0);
}

tree::TerminalNode* MyLanguageParser::StmtContext::RBRA() {
  return getToken(MyLanguageParser::RBRA, 0);
}


size_t MyLanguageParser::StmtContext::getRuleIndex() const {
  return MyLanguageParser::RuleStmt;
}


std::any MyLanguageParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyLanguageVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

MyLanguageParser::StmtContext* MyLanguageParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 6, MyLanguageParser::RuleStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(68);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MyLanguageParser::IF: {
        enterOuterAlt(_localctx, 1);
        setState(58);
        if_stmt();
        break;
      }

      case MyLanguageParser::WHILE: {
        enterOuterAlt(_localctx, 2);
        setState(59);
        while_stmt();
        break;
      }

      case MyLanguageParser::VAR: {
        enterOuterAlt(_localctx, 3);
        setState(60);
        var_decl_stmt();
        break;
      }

      case MyLanguageParser::IDENT: {
        enterOuterAlt(_localctx, 4);
        setState(61);
        assign_stmt();
        break;
      }

      case MyLanguageParser::PRINT: {
        enterOuterAlt(_localctx, 5);
        setState(62);
        print_stmt();
        break;
      }

      case MyLanguageParser::CALL: {
        enterOuterAlt(_localctx, 6);
        setState(63);
        call_stmt();
        break;
      }

      case MyLanguageParser::LBRA: {
        enterOuterAlt(_localctx, 7);
        setState(64);
        match(MyLanguageParser::LBRA);
        setState(65);
        stmts();
        setState(66);
        match(MyLanguageParser::RBRA);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtsContext ------------------------------------------------------------------

MyLanguageParser::StmtsContext::StmtsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MyLanguageParser::StmtContext *> MyLanguageParser::StmtsContext::stmt() {
  return getRuleContexts<MyLanguageParser::StmtContext>();
}

MyLanguageParser::StmtContext* MyLanguageParser::StmtsContext::stmt(size_t i) {
  return getRuleContext<MyLanguageParser::StmtContext>(i);
}


size_t MyLanguageParser::StmtsContext::getRuleIndex() const {
  return MyLanguageParser::RuleStmts;
}


std::any MyLanguageParser::StmtsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyLanguageVisitor*>(visitor))
    return parserVisitor->visitStmts(this);
  else
    return visitor->visitChildren(this);
}

MyLanguageParser::StmtsContext* MyLanguageParser::stmts() {
  StmtsContext *_localctx = _tracker.createInstance<StmtsContext>(_ctx, getState());
  enterRule(_localctx, 8, MyLanguageParser::RuleStmts);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2147484092) != 0)) {
      setState(70);
      stmt();
      setState(75);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_stmtContext ------------------------------------------------------------------

MyLanguageParser::If_stmtContext::If_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyLanguageParser::If_stmtContext::IF() {
  return getToken(MyLanguageParser::IF, 0);
}

tree::TerminalNode* MyLanguageParser::If_stmtContext::LPAR() {
  return getToken(MyLanguageParser::LPAR, 0);
}

MyLanguageParser::ExprContext* MyLanguageParser::If_stmtContext::expr() {
  return getRuleContext<MyLanguageParser::ExprContext>(0);
}

tree::TerminalNode* MyLanguageParser::If_stmtContext::RPAR() {
  return getToken(MyLanguageParser::RPAR, 0);
}

std::vector<MyLanguageParser::StmtContext *> MyLanguageParser::If_stmtContext::stmt() {
  return getRuleContexts<MyLanguageParser::StmtContext>();
}

MyLanguageParser::StmtContext* MyLanguageParser::If_stmtContext::stmt(size_t i) {
  return getRuleContext<MyLanguageParser::StmtContext>(i);
}

tree::TerminalNode* MyLanguageParser::If_stmtContext::ELSE() {
  return getToken(MyLanguageParser::ELSE, 0);
}


size_t MyLanguageParser::If_stmtContext::getRuleIndex() const {
  return MyLanguageParser::RuleIf_stmt;
}


std::any MyLanguageParser::If_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyLanguageVisitor*>(visitor))
    return parserVisitor->visitIf_stmt(this);
  else
    return visitor->visitChildren(this);
}

MyLanguageParser::If_stmtContext* MyLanguageParser::if_stmt() {
  If_stmtContext *_localctx = _tracker.createInstance<If_stmtContext>(_ctx, getState());
  enterRule(_localctx, 10, MyLanguageParser::RuleIf_stmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(MyLanguageParser::IF);
    setState(77);
    match(MyLanguageParser::LPAR);
    setState(78);
    expr();
    setState(79);
    match(MyLanguageParser::RPAR);
    setState(80);
    stmt();
    setState(83);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      setState(81);
      match(MyLanguageParser::ELSE);
      setState(82);
      stmt();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- While_stmtContext ------------------------------------------------------------------

MyLanguageParser::While_stmtContext::While_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyLanguageParser::While_stmtContext::WHILE() {
  return getToken(MyLanguageParser::WHILE, 0);
}

tree::TerminalNode* MyLanguageParser::While_stmtContext::LPAR() {
  return getToken(MyLanguageParser::LPAR, 0);
}

MyLanguageParser::ExprContext* MyLanguageParser::While_stmtContext::expr() {
  return getRuleContext<MyLanguageParser::ExprContext>(0);
}

tree::TerminalNode* MyLanguageParser::While_stmtContext::RPAR() {
  return getToken(MyLanguageParser::RPAR, 0);
}

MyLanguageParser::StmtContext* MyLanguageParser::While_stmtContext::stmt() {
  return getRuleContext<MyLanguageParser::StmtContext>(0);
}


size_t MyLanguageParser::While_stmtContext::getRuleIndex() const {
  return MyLanguageParser::RuleWhile_stmt;
}


std::any MyLanguageParser::While_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyLanguageVisitor*>(visitor))
    return parserVisitor->visitWhile_stmt(this);
  else
    return visitor->visitChildren(this);
}

MyLanguageParser::While_stmtContext* MyLanguageParser::while_stmt() {
  While_stmtContext *_localctx = _tracker.createInstance<While_stmtContext>(_ctx, getState());
  enterRule(_localctx, 12, MyLanguageParser::RuleWhile_stmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    match(MyLanguageParser::WHILE);
    setState(86);
    match(MyLanguageParser::LPAR);
    setState(87);
    expr();
    setState(88);
    match(MyLanguageParser::RPAR);
    setState(89);
    stmt();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Call_stmtContext ------------------------------------------------------------------

MyLanguageParser::Call_stmtContext::Call_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyLanguageParser::Call_stmtContext::CALL() {
  return getToken(MyLanguageParser::CALL, 0);
}

tree::TerminalNode* MyLanguageParser::Call_stmtContext::IDENT() {
  return getToken(MyLanguageParser::IDENT, 0);
}

tree::TerminalNode* MyLanguageParser::Call_stmtContext::SEMICOLON() {
  return getToken(MyLanguageParser::SEMICOLON, 0);
}


size_t MyLanguageParser::Call_stmtContext::getRuleIndex() const {
  return MyLanguageParser::RuleCall_stmt;
}


std::any MyLanguageParser::Call_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyLanguageVisitor*>(visitor))
    return parserVisitor->visitCall_stmt(this);
  else
    return visitor->visitChildren(this);
}

MyLanguageParser::Call_stmtContext* MyLanguageParser::call_stmt() {
  Call_stmtContext *_localctx = _tracker.createInstance<Call_stmtContext>(_ctx, getState());
  enterRule(_localctx, 14, MyLanguageParser::RuleCall_stmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    match(MyLanguageParser::CALL);
    setState(92);
    match(MyLanguageParser::IDENT);
    setState(93);
    match(MyLanguageParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_decl_stmtContext ------------------------------------------------------------------

MyLanguageParser::Var_decl_stmtContext::Var_decl_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyLanguageParser::Var_decl_stmtContext::VAR() {
  return getToken(MyLanguageParser::VAR, 0);
}

tree::TerminalNode* MyLanguageParser::Var_decl_stmtContext::IDENT() {
  return getToken(MyLanguageParser::IDENT, 0);
}

tree::TerminalNode* MyLanguageParser::Var_decl_stmtContext::ASSIGN() {
  return getToken(MyLanguageParser::ASSIGN, 0);
}

MyLanguageParser::ExprContext* MyLanguageParser::Var_decl_stmtContext::expr() {
  return getRuleContext<MyLanguageParser::ExprContext>(0);
}

tree::TerminalNode* MyLanguageParser::Var_decl_stmtContext::SEMICOLON() {
  return getToken(MyLanguageParser::SEMICOLON, 0);
}


size_t MyLanguageParser::Var_decl_stmtContext::getRuleIndex() const {
  return MyLanguageParser::RuleVar_decl_stmt;
}


std::any MyLanguageParser::Var_decl_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyLanguageVisitor*>(visitor))
    return parserVisitor->visitVar_decl_stmt(this);
  else
    return visitor->visitChildren(this);
}

MyLanguageParser::Var_decl_stmtContext* MyLanguageParser::var_decl_stmt() {
  Var_decl_stmtContext *_localctx = _tracker.createInstance<Var_decl_stmtContext>(_ctx, getState());
  enterRule(_localctx, 16, MyLanguageParser::RuleVar_decl_stmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    match(MyLanguageParser::VAR);
    setState(96);
    match(MyLanguageParser::IDENT);
    setState(97);
    match(MyLanguageParser::ASSIGN);
    setState(98);
    expr();
    setState(99);
    match(MyLanguageParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Assign_stmtContext ------------------------------------------------------------------

MyLanguageParser::Assign_stmtContext::Assign_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyLanguageParser::Assign_stmtContext::IDENT() {
  return getToken(MyLanguageParser::IDENT, 0);
}

tree::TerminalNode* MyLanguageParser::Assign_stmtContext::ASSIGN() {
  return getToken(MyLanguageParser::ASSIGN, 0);
}

MyLanguageParser::ExprContext* MyLanguageParser::Assign_stmtContext::expr() {
  return getRuleContext<MyLanguageParser::ExprContext>(0);
}

tree::TerminalNode* MyLanguageParser::Assign_stmtContext::SEMICOLON() {
  return getToken(MyLanguageParser::SEMICOLON, 0);
}


size_t MyLanguageParser::Assign_stmtContext::getRuleIndex() const {
  return MyLanguageParser::RuleAssign_stmt;
}


std::any MyLanguageParser::Assign_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyLanguageVisitor*>(visitor))
    return parserVisitor->visitAssign_stmt(this);
  else
    return visitor->visitChildren(this);
}

MyLanguageParser::Assign_stmtContext* MyLanguageParser::assign_stmt() {
  Assign_stmtContext *_localctx = _tracker.createInstance<Assign_stmtContext>(_ctx, getState());
  enterRule(_localctx, 18, MyLanguageParser::RuleAssign_stmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    match(MyLanguageParser::IDENT);
    setState(102);
    match(MyLanguageParser::ASSIGN);
    setState(103);
    expr();
    setState(104);
    match(MyLanguageParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Print_stmtContext ------------------------------------------------------------------

MyLanguageParser::Print_stmtContext::Print_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyLanguageParser::Print_stmtContext::PRINT() {
  return getToken(MyLanguageParser::PRINT, 0);
}

tree::TerminalNode* MyLanguageParser::Print_stmtContext::LPAR() {
  return getToken(MyLanguageParser::LPAR, 0);
}

MyLanguageParser::ExprContext* MyLanguageParser::Print_stmtContext::expr() {
  return getRuleContext<MyLanguageParser::ExprContext>(0);
}

tree::TerminalNode* MyLanguageParser::Print_stmtContext::RPAR() {
  return getToken(MyLanguageParser::RPAR, 0);
}

tree::TerminalNode* MyLanguageParser::Print_stmtContext::SEMICOLON() {
  return getToken(MyLanguageParser::SEMICOLON, 0);
}


size_t MyLanguageParser::Print_stmtContext::getRuleIndex() const {
  return MyLanguageParser::RulePrint_stmt;
}


std::any MyLanguageParser::Print_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyLanguageVisitor*>(visitor))
    return parserVisitor->visitPrint_stmt(this);
  else
    return visitor->visitChildren(this);
}

MyLanguageParser::Print_stmtContext* MyLanguageParser::print_stmt() {
  Print_stmtContext *_localctx = _tracker.createInstance<Print_stmtContext>(_ctx, getState());
  enterRule(_localctx, 20, MyLanguageParser::RulePrint_stmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(MyLanguageParser::PRINT);
    setState(107);
    match(MyLanguageParser::LPAR);
    setState(108);
    expr();
    setState(109);
    match(MyLanguageParser::RPAR);
    setState(110);
    match(MyLanguageParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

MyLanguageParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MyLanguageParser::BitwiseorContext* MyLanguageParser::ExprContext::bitwiseor() {
  return getRuleContext<MyLanguageParser::BitwiseorContext>(0);
}


size_t MyLanguageParser::ExprContext::getRuleIndex() const {
  return MyLanguageParser::RuleExpr;
}


std::any MyLanguageParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MyLanguageVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}

MyLanguageParser::ExprContext* MyLanguageParser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 22, MyLanguageParser::RuleExpr);
